--- a/index.html
+++ b/index.html
@@ -8,8 +8,25 @@
   </head>
 
   <body>
+       <!-- Always shows a header, even in smaller screens. -->
+       <div class = "mdl-layout mdl-js-layout mdl-layout--fixed-header">
+        <header class = "mdl-layout__header">
+           <div class = "mdl-layout__header-row">
+              <!-- Title -->
+              <span class = "mdl-layout-title">HTML5 Tutorial</span>
+              <!-- Add spacer, to align navigation to the right -->
+              <div class = "mdl-layout-spacer"></div>
+              <!-- Navigation -->
+              <nav class = "mdl-navigation">
+                 <a class = "mdl-navigation__link" href = "" 
+                    style = "color:gray">Home</a>
+                 <a class = "mdl-navigation__link" href = "" 
+                    style = "color:gray">About</a>
+              </nav>
+           </div>
+        </header>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <h1>Hello, World!</h1>
   </body>
-  
+ 
 </html>
