--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
               <!-- Navigation -->
               <nav class = "mdl-navigation">
                  <a class = "mdl-navigation__link" href = "" 
-                    style = "color:gray">Home</a>
+                    style = "color:rgb(255, 255, 255)">Home</a>
                  <a class = "mdl-navigation__link" href = "" 
-                    style = "color:gray">About</a>
+                    style = "color:white">About</a>
               </nav>
            </div>
         </header>
