--- a/index.html
+++ b/index.html
@@ -27,6 +27,19 @@
         </header>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <h1>Hello, World!</h1>
+    <!-- Textfield with Floating Label -->
+
+<form action="#">
+  <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+    <input class="mdl-textfield__input" type="text" id="sample3">
+    <label class="mdl-textfield__label" for="sample3">Text...</label>
+  </div>
+</form>
+
+<!-- Raised button with ripple -->
+<button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
+  Button
+</button>
   </body>
  
 </html>
