--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         </header>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <h1>Hello, World!</h1>
+    color: indigo-blue
     <!-- Textfield with Floating Label -->
 
 <form action="#">
