--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 <!-- Accent-colored raised button with ripple -->
 <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
-  Button
+  SUBMIT
 </button>
  
 </html>
